# city-rides-data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dbt/models/: schema.yml
dbt/models/staging/: stg_trips.sql
docs/: architecture.md  deploy_streamlit.md  github_setup.md  orchestration.md
src/pipeline/: __init__.py  config.py  generate.py  ingest.py  monitoring.py  prefect_flow.py  quality.py  run_pipeline.py  sources.py  transform.py
tests/: test_pipeline.py
